--- a/css/style.css
+++ b/css/style.css
@@ -217,6 +217,9 @@ article .restaurant_lien {
   border-radius: 25px 25px 25px 25px;
   box-shadow: 2px 2px 15px rgba(0, 0, 0, 0.123);
 }
+article .restaurant_lien:hover {
+  box-shadow: 0px 0px 15px #9356DC;
+}
 
 .image {
   position: relative;
@@ -343,19 +346,6 @@ a {
   }
   article .fa-heart {
     font-size: 30px;
-  }
-
-  footer p {
-    text-align: center;
-    font-size: 35px;
-  }
-  footer ul {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    gap: 100px;
-    text-align: center;
   }
 }
 
