--- a/sass/style.scss
+++ b/sass/style.scss
@@ -40,7 +40,6 @@
         border-right: 7px solid $tertiaire;
         animation: spinner 1.5s ;
         animation-iteration-count: 3;
-
     }
 }
 
@@ -48,8 +47,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-
 }
+
 .justify_center{
     display: flex;
     justify-content: center;
@@ -107,7 +106,6 @@ button{
     font-size: 21px;
     margin-bottom: 40px;
     box-shadow: 1px 1px 15px rgba(0, 0, 0, 0.274);
-
     &:hover{
         cursor: pointer;
         box-shadow: 1px 1px 20px rgba(0, 0, 0, 0.541);
@@ -178,6 +176,9 @@ article{
         background-color: white;
         border-radius: 25px 25px 25px 25px;
         box-shadow: 2px 2px 15px rgba(0, 0, 0, 0.123);
+        &:hover{
+            box-shadow: 0px 0px 15px $primaire;
+        }
     }
 }
 
@@ -271,7 +272,6 @@ a{
             object-position: 50% 80%;
         }
     }
-    
 }
 
 @media screen and (min-width:992px)
@@ -306,22 +306,6 @@ a{
         }
         .fa-heart{
             font-size: 30px;
-        }
-    }
-
-    footer{
-        p{
-            text-align: center;
-            font-size: 35px;
-        }
-        ul{
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            width: 100%;
-            gap: 100px;
-            text-align: center;
-            
         }
     }
 }
