Correction petits détails

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -89,6 +89,7 @@ header{
     h1{
         font-size: 30px;
         margin: 15px 40px 15px 40px;
+        height: auto;
     }
     p{
         font-size: 23px;
