--- a/sass/style.scss
+++ b/sass/style.scss
@@ -89,7 +89,6 @@ header{
     h1{
         font-size: 30px;
         margin: 15px 40px 15px 40px;
-        height: auto;
     }
     p{
         font-size: 23px;
@@ -104,7 +103,7 @@ button{
     background: linear-gradient(to bottom right,#FF79DA,#9356DC);
     border: 0;
     width: 65%;
-    font-size: 21px;
+    font-size: $fontsize_button;
     margin-bottom: 40px;
     box-shadow: 1px 1px 15px rgba(0, 0, 0, 0.274);
     &:hover{
@@ -125,7 +124,7 @@ aside{
     }
 }
 
-.fonctionnement1{
+.fonctionnement{
     p{
         background-color: $primaire;
         color: white;
@@ -139,26 +138,25 @@ aside{
     }
 }
 
-.fonctionnement{
+.fonctionnement_text{
     margin: 20px 0 15px 0px;
     border-radius: 25px;
     box-shadow: 2px 2px 15px rgba(0, 0, 0, 0.123);
     width: 100%;
     height: 90px;
     background-color: $fond-grisclair;
-    &:hover{
-        background-color: $primaire-claire;
-    }
     i{
         padding: 0 30px 0 43px;
         font-size: 25px;}
-}
-
-.sans_couleur{
-    color: $grisfonce;
-}
-.couleur{
-    color: $primaire;
+    .couleur{
+        color: $grisfonce;
+    }
+    &:hover{
+        background-color: $primaire-claire;
+    }
+    &:hover .couleur{
+        color: $primaire;
+    }
 }
 
 article{
@@ -181,39 +179,36 @@ article{
             box-shadow: 0px 0px 15px $primaire;
         }
     }
-}
-
-.image {
-    position: relative;
-}
-  
-.nouveau {
-    position: absolute;
-    top: 7%;
-    right: 4%;
-    background-color: $tertiaire;
-    color: $tertiairefonce;
-    font-weight: bold;
-    padding: 8px 15px 8px 15px;
-    font-size: 18px;
-    border-radius: 4px;
-}
-
-.image img{
-    height: 220px;
-    width: 100%;
-    object-fit: cover;
-    border-radius: 25px 25px 0 0;}
-
-    .img2{
-        object-position: 50% 60%;
+    .image {
+        position: relative;
+        img{
+            height: 220px;
+            width: 100%;
+            object-fit: cover;
+            border-radius: 25px 25px 0 0;
+        }
+        .img2{
+            object-position: 50% 60%;
+        }
+        .img3{
+            object-position: 50% 80%; 
+        }
+        .img4{
+            object-position: 50% 80%;
+        }
     }
-    .img3{
-        object-position: 50% 80%; 
-    }
-    .img4{
-        object-position: 50% 80%;
-    }
+    .nouveau {
+        position: absolute;
+        top: 7%;
+        right: 4%;
+        background-color: $tertiaire;
+        color: $tertiairefonce;
+        font-weight: bold;
+        padding: 8px 15px 8px 15px;
+        font-size: 18px;
+        border-radius: 4px;
+    }    
+}
 
 .restaurant_description{
     display: flex;
@@ -244,7 +239,7 @@ a{
     text-decoration: none;
 }
 
-
+/*TABLETTE*/
 @media screen and (min-width:768px)
 {
     button{
@@ -259,7 +254,7 @@ a{
         }
     }
 
-    .fonctionnement1 h3{
+    .fonctionnement h3{
         font-size: 27px;
     }
     .image {
@@ -275,6 +270,7 @@ a{
     }
 }
 
+/*DESKTOP*/
 @media screen and (min-width:992px)
 {
     button{
@@ -287,7 +283,7 @@ a{
     .fonctionnement_liste{
         display: flex;
         justify-content: space-between;
-        .fonctionnement1{
+        .fonctionnement{
             width: 33%;
         }
     }
