--- a/sass/stylemenu.scss
+++ b/sass/stylemenu.scss
@@ -17,11 +17,6 @@
     box-sizing: border-box; 
 }
 
-.center{
-    display: flex;
-    justify-content: center;
-}
-
 body{
     margin: 0;
 }
@@ -56,33 +51,15 @@ main {
     background-color: $fond-grisclair;
     border-radius: 50px 50px 0 0;
     padding: 10px 20px 25px 20px;
+    .titre{
+        display: flex;
+        justify-content: space-between;
+        margin: 40px 30px 40px 0;
+        height: 80px;
+    }
     h1{
-        font-family: 'Shrikhand';
+        font-family: $fonttitre;
         font-size: 38px;
-    }
-    i{
-        font-size: 30px;
-    }
-    h2{
-        font-weight: normal;
-        padding-bottom: 10px;
-        margin-top: 15px;
-    }
-    span{
-        padding-bottom: 5px;
-        border-bottom: 4px $tertiaire solid;
-    }
-    .liste_plat{
-        margin-bottom: 50px;
-    }
-}
-
-.titre{
-    display: flex;
-    justify-content: space-between;
-    margin: 40px 30px 40px 0;
-    height: 80px;
-    h1{
         margin-top: 0;
         padding-right: 5px;
     }
@@ -102,11 +79,21 @@ main {
             -webkit-text-fill-color: transparent;
         }
     }
+    h2{
+        font-weight: normal;
+        padding-bottom: 10px;
+        margin-top: 15px;
+    }
+    span{
+        padding-bottom: 5px;
+        border-bottom: 4px $tertiaire solid;
+    }
+    .liste_plat{
+        margin-bottom: 50px;
+        animation-name: mouvement;
+    }
 }
 
-.liste_plat{
-    animation-name: mouvement;
-}
 #delai1{
     animation-duration: 3s;
 }
@@ -163,22 +150,19 @@ main {
     i{
         color: white;
     }
-}
-
-.plat:hover .check{
-    width: 15%;
-    transform:translateX(0px);
-    transition-duration: 0.5s;
-}
-
-.plat:hover .description{
-    width: 85%;
-    transition-duration: 0.5s;
-}
-
-.plat:hover i{
-    transform: rotate(360deg);
-    transition-duration: 0.5s;
+    &:hover .check{
+        width: 15%;
+        transform:translateX(0px);
+        transition-duration: 0.5s;
+    }
+    &:hover .description{
+        width: 85%;
+        transition-duration: 0.5s;
+    }
+    &:hover i{
+        transform: rotate(360deg);
+        transition-duration: 0.5s;
+    }
 }
 
 .description > *{
@@ -187,14 +171,20 @@ main {
     overflow: hidden;
 }
 
+.center{
+    display: flex;
+    justify-content: center;
+}
+
 button{
+    
     color: white;
     border-radius: 35px;
     padding: 20px 10px 20px 10px;
     background: linear-gradient(to bottom right,#FF79DA,#9356DC);
     border: 0;
     width: 56%;
-    font-size: 21px;
+    font-size: $fontsize_button;
     margin: 17px 0 47px 0;
     box-shadow: 1px 1px 15px rgba(0, 0, 0, 0.274);
     &:hover{
@@ -204,7 +194,7 @@ button{
     }
 }
 
-
+/*TABLETTE*/
 @media screen and (min-width:768px)
 {
     .resto{
@@ -212,33 +202,34 @@ button{
     }
 }
 
-
+/*DESKTOP*/
 @media screen and (min-width:992px)
 {
     main {
         .resto{
             padding: 10px 65px 25px 65px;
+            .titre{
+                display: flex;
+                justify-content: center;
+                gap: 60px;
+                height: 50px;
+            }
         }
         img{
             object-position: 50% 63%;
         }
-    }
-    .categorie{
-        display: flex;
-        width: 100%;
-        justify-content: space-between;
-    }
-    .titre{
-        justify-content: center;
-        gap: 60px;
-        height: 50px;
-    }
-    .liste_plat{
-        width: 30%;
-        display: flex;
-        flex-direction: column;
-    }
-    button{
-        width: 20%;
+        .categorie{
+            display: flex;
+            width: 100%;
+            justify-content: space-between;
+        }
+        .liste_plat{
+            width: 30%;
+            display: flex;
+            flex-direction: column;
+        }
+        button{
+            width: 20%;
+        }
     }
 }
