Modification animation coeur

--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,30 @@ footer a {
     text-align: center;
   }
 }
+.coeur {
+  position: relative;
+  margin-right: 20px;
+}
+.coeur i {
+  position: absolute;
+  font-size: 25px;
+}
+.coeur .coeurplein {
+  opacity: 0;
+  transition-duration: 0.5s;
+  background: -webkit-gradient(linear, left top, left bottom, from(#9356DC), to(#FF79DA));
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.coeur:hover .coeurvide {
+  transition-duration: 0.5s;
+  opacity: 0;
+}
+.coeur:hover .coeurplein {
+  transition-duration: 0.5s;
+  opacity: 1;
+}
+
 * {
   font-family: "Roboto";
   box-sizing: border-box;
@@ -258,18 +282,6 @@ article .nouveau {
 .restaurant_description p {
   padding-top: 5px;
   font-size: 22px;
-}
-.restaurant_description .coeurplein {
-  visibility: hidden;
-}
-.restaurant_description .coeur:hover {
-  display: none;
-}
-.restaurant_description .coeur:hover:hover + .coeurplein {
-  visibility: visible;
-  background: -webkit-gradient(linear, left top, left bottom, from(#FF79DA), to(#9356DC));
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
 }
 
 a {
