--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,5 +1,6 @@
 @import "variables";
 @import "footer";
+@import "coeur";
 
 *{
     font-family: $fonttext;
@@ -8,19 +9,17 @@
 
 @keyframes spinner{
     0%{
-        transform: rotate(0deg)
-    }
+        transform: rotate(0deg);    }
     100%{
-        transform: rotate(360deg)
-    }
+        transform: rotate(360deg);    }
 }
 
 @keyframes loading{
     100%{
         opacity: 0;
-        z-index: -1;
-    }
+        z-index: -1;    }
 }
+
 .loader{
     width: 100%;
     height: 100%;
@@ -39,15 +38,13 @@
         border-left: 7px solid $tertiaire;
         border-right: 7px solid $tertiaire;
         animation: spinner 1.5s ;
-        animation-iteration-count: 3;
-    }
+        animation-iteration-count: 3;    }
 }
 
 .center{
     display: flex;
     justify-content: center;
-    align-items: center;
-}
+    align-items: center;}
 
 .justify_center{
     display: flex;
@@ -219,18 +216,6 @@ article{
     p{
         padding-top: 5px;
         font-size: 22px;
-    }
-    .coeurplein{
-        visibility: hidden;
-    }
-    .coeur:hover{
-        display: none;
-        &:hover + .coeurplein{
-            visibility: visible;
-            background: -webkit-gradient(linear, left top, left bottom, from($secondaire), to($primaire));
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-        }
     }
 }
 
