--- a/sass/stylemenu.scss
+++ b/sass/stylemenu.scss
@@ -103,6 +103,11 @@ main {
     box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.103);
     overflow: hidden;
     cursor: pointer;
+    h3{
+        margin: 0 0 5px 0;
+        font-size: 24px;
+        height: 30px;
+    }
     .description{
         width: 90%;
         height: 90px;
@@ -113,13 +118,8 @@ main {
             margin: 0;
         }
     }
-    h3{
-        margin: 0 0 5px 0;
-        font-size: 24px;
-        height: 30px;
-    }
     .prix{
-        width: 50px;
+        width: 10%;
         overflow: hidden;
         font-size: 20px;
         font-weight: bold;
@@ -131,17 +131,13 @@ main {
         justify-content: center;
         width: 0%;
         background-color: $tertiaire;
-        transition-duration: 0.8s;
-        transform:translateX(80px);
-        transition: 0.8s;
-        transform-origin: 100% 50%;
+        transition: 0.5s;
     }
     i{
         color: white;
     }
     &:hover .check{
         width: 15%;
-        transform:translateX(0px);
         transition-duration: 0.5s;
     }
     &:hover .description{
