--- a/sass/_coeur.scss
+++ b/sass/_coeur.scss
@@ -1,6 +1,6 @@
 .coeur{
     position: relative;
-    margin-right: 20px;
+    margin-right: 2%;
     i{
         position: absolute;
         font-size: 25px;
