--- a/sass/stylemenu.scss
+++ b/sass/stylemenu.scss
@@ -63,6 +63,7 @@ main {
         font-size: 38px;
         margin-top: 0;
         padding-right: 5px;
+        width: 90%;
     }
     i{
         font-size: 35px;
@@ -108,7 +109,7 @@ main {
         height: 30px;
     }
     .description{
-        width: 90%;
+        width: 80%;
         height: 90px;
         overflow: hidden;
         padding: 15px 0px 15px 20px;
@@ -118,7 +119,7 @@ main {
         }
     }
     .prix{
-        width: 10%;
+        width: 20%;
         overflow: hidden;
         font-size: 20px;
         font-weight: bold;
@@ -211,6 +212,12 @@ button{
             width: 30%;
             display: flex;
             flex-direction: column;
+            .description{
+                width: 90%;
+            }
+            .prix{
+                width: 10%;
+            }
         }
         button{
             width: 20%;
